--- a/simplemooc/core/templates/base.html
+++ b/simplemooc/core/templates/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Simple MOOC - Uma simples plataforma de ensino a distância" />
     <title>Simple MOOC</title>
-    <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
+    <link rel="stylesheet" href="{% static 'css/pure-min.css' %}">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
 </head>
 <body>
@@ -32,6 +32,6 @@
         Simple MOOC - Uma simples plataforma de ensino a distância
     </div>
 </div>
-<script src="http://yui.yahooapis.com/3.12.0/build/yui/yui-min.js"></script>
+<script src="{% static 'js/yui.js' %}"></script>
 </body>
 </html>
